# file-converter

./: .gitignore  .gitmodules  README.md
file-conv-framework/: README.md  pyproject.toml
file-conv-framework/docs/: index.md
file-conv-framework/examples/: cli_app_example.py  readme.md  simple_converter.py  spreadsheet_converter.py
file-conv-framework/file_conv_framework/: base_converter.py  converter_app.py  filetypes.py  io_handler.py  logger.py  mimes.py
file-conv-scripts/: README.md  pyproject.toml
file-conv-scripts/docs/: index.md
file-conv-scripts/file_conv_scripts/: app.py  converter_app.py  converters.py  io_handlers.py
file-conv-scripts/file_conv_scripts/io_handlers/: __init__.py  image.py  img_opencv.py  img_pillow.py  pdf.py  spreadsheet.py  video.py
file-conv-scripts/file_conv_scripts/modules/: img_to_pdf.py
file_converter/: converters.py  convertion_handler.py  filetype_handler.py  io_handler.py  main.py
file_converter/tests/input/: test1.md
openconv-core/: pyproject.toml
openconv-core/convcore/: base_converter.py
openconv-python/: pyproject.toml
openconv-python/openconv/: app.py  converters.py
openconv-python/openconv/io_handlers/: __init__.py  video.py
openconv-python/openconv/utils/: image_to_video.py
scripts/: run-docu.sh
