[tool.poetry]
name = "file-conv-framework"
version = "0.1.1"
description = ""
authors = ["hermann-web <hermannagossou6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"


[tool.poetry.group.mimes.dependencies]
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
