[tool.poetry]
name = "file-conv-framework"
version = "0.1.4"
description = "A robust framework for handling file conversion tasks in Python"
authors = ["Hermann Agossou <agossouhermann7@gmail.com>"]
readme = "README.md"
maintainers = [
    "Hermann Agossou <agossouhermann7@gmail.com>"
]
license = "MIT"
homepage = "https://hermann-web.github.io/blog/projects/introducing-two-new-packages-for-streamlining-file-conversions-in-python/"
repository = "https://github.com/Hermann-web/file-converter"
documentation = "https://github.com/Hermann-web/file-converter/blob/main/file-conv-framework/docs/index.md"
keywords = ["file conversion", "data processing", "file formats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.7.2"


[tool.poetry.group.mimes.dependencies]
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
