[tool.poetry]
name = "file-conv-scripts"
version = "0.1.0"
description = ""
authors = ["hermann-web <hermannagossou6@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9"
file-conv-framework = {version = "^0.1.4a1", source = "test-pypi"}
python-magic = "^0.4.27"
pillow = "^10.2.0"
pandas = "^2.2.1"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fileconv = "file_conv_scripts.app:main"
