[tool.poetry]
name = "openconv-python"
packages = [
    {include = "openconv"}
]
version = "0.2.4"
description = "A collection of Python scripts for file conversion tasks, built on top of the openconv-core framework."
authors = ["Hermann Agossou <agossouhermann7@gmail.com>"]
readme = "README.md"
maintainers = [
    "Hermann Agossou <agossouhermann7@gmail.com>"
]
license = "MIT"
homepage = "https://hermann-web.github.io/blog/projects/introducing-two-new-packages-for-streamlining-file-conversions-in-python/"
repository = "https://github.com/Hermann-web/file-converter"
documentation = "https://github.com/Hermann-web/file-converter/blob/main/openconv-python/docs/index.md"
keywords = ["file conversion", "data processing", "file formats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.9"
openconv-core = {version = "^0.1.5", source = "test-pypi"}
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
pypdf2 = "^3.0.1"
python-magic = "^0.4.27"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
openconv = "openconv.app:main"
